@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: tua_as.c,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/25 18:58:47 $
+ @(#) $RCSfile: tua_as.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/05/17 22:55:31 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/03/25 18:58:47 $ by $Author: brian $
+ Last Modified $Date: 2007/05/17 22:55:31 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: tua_as.c,v $
+ Revision 0.9.2.6  2007/05/17 22:55:31  brian
+ - use mi_timer requeue to requeue mi timers
+
  Revision 0.9.2.5  2007/03/25 18:58:47  brian
  - changes to support 2.6.20-1.2307.fc5 kernel
 
@@ -67,10 +70,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: tua_as.c,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/25 18:58:47 $"
+#ident "@(#) $RCSfile: tua_as.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/05/17 22:55:31 $"
 
 static char const ident[] =
-    "$RCSfile: tua_as.c,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/25 18:58:47 $";
+    "$RCSfile: tua_as.c,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/05/17 22:55:31 $";
 
 #ifndef HAVE_KTYPE_BOOL
 #include <stdbool.h>
@@ -144,7 +147,7 @@ static char const ident[] =
 /* ============================== */
 
 #define TUA_AS_DESCRIP		"TUA/SCTP AS TCAP STREAMS MULTIPLEXING DRIVER."
-#define TUA_AS_REVISION		"OpenSS7 $RCSfile: tua_as.c,v $ $Name:  $ ($Revision: 0.9.2.5 $) $Date: 2007/03/25 18:58:47 $"
+#define TUA_AS_REVISION		"OpenSS7 $RCSfile: tua_as.c,v $ $Name:  $ ($Revision: 0.9.2.6 $) $Date: 2007/05/17 22:55:31 $"
 #define TUA_AS_COPYRIGHT	"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
 #define TUA_AS_DEVICE		"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
 #define TUA_AS_CONTACT		"Brian Bidulock <bidulock@openss7.org>"
@@ -17554,7 +17557,7 @@ tp_r_sig(queue_t *q, mblk_t *mp)
 	int rtn = 0;
 
 	if (!(tp = tp_acquire(q)))
-		return (-EDEADLK);
+		return (mi_timer_requeue(mp) ? -EDEADLK : 0);
 
 	if (likely(mi_timer_valid(mp))) {
 		switch (t->timer) {
@@ -17592,6 +17595,8 @@ tp_r_sig(queue_t *q, mblk_t *mp)
 			rtn = 0;
 			break;
 		}
+		if (rtn && !mi_timer_requeue(mp))
+			rtn = 0;
 	}
 
 	tp_release(tp);
