@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2007/03/25 18:59:06 $
+ @(#) $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/05/17 22:55:37 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/03/25 18:59:06 $ by $Author: brian $
+ Last Modified $Date: 2007/05/17 22:55:37 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: m2pa_sl.c,v $
+ Revision 0.9.2.12  2007/05/17 22:55:37  brian
+ - use mi_timer requeue to requeue mi timers
+
  Revision 0.9.2.11  2007/03/25 18:59:06  brian
  - changes to support 2.6.20-1.2307.fc5 kernel
 
@@ -79,10 +82,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2007/03/25 18:59:06 $"
+#ident "@(#) $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/05/17 22:55:37 $"
 
 static char const ident[] =
-    "$RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2007/03/25 18:59:06 $";
+    "$RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/05/17 22:55:37 $";
 
 #ifndef HAVE_KTYPE_BOOL
 #include <stdbool.h>
@@ -116,7 +119,7 @@ static char const ident[] =
 #include <ss7/sli_ioctl.h>
 
 #define M2PA_SL_DESCRIP		"M2PA/SCTP SIGNALLING LINK (SL) STREAMS MODULE."
-#define M2PA_SL_REVISION	"OpenSS7 $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2007/03/25 18:59:06 $"
+#define M2PA_SL_REVISION	"OpenSS7 $RCSfile: m2pa_sl.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2007/05/17 22:55:37 $"
 #define M2PA_SL_COPYRIGHT	"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
 #define M2PA_SL_DEVICE		"Part of the OpenSS7 Stack for Linux Fast STREAMS."
 #define M2PA_SL_CONTACT		"Brian Bidulock <bidulock@openss7.org>"
@@ -7898,7 +7901,8 @@ sl_r_sig(queue_t *q, mblk_t *mp)
 			case -ENOMEM:
 			case -EBUSY:
 			case -EAGAIN:
-				break;
+				if (mi_timer_requeue(mp))
+					break;
 			default:
 				rtn = QR_ABSORBED;
 			}
