@@ -1,3 +1,15 @@
+2007-05-17  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/drivers/isua_as.c: use mi_timer_requeue to requeue mi timers
+	* src/drivers/m2ua_as.c: use mi_timer_requeue to requeue mi timers
+	* src/drivers/m3ua_as.c: use mi_timer_requeue to requeue mi timers
+	* src/drivers/sua_as.c: use mi_timer_requeue to requeue mi timers
+	* src/drivers/tua_as.c: use mi_timer_requeue to requeue mi timers
+	* src/drivers/ua_as.c: use mi_timer_requeue to requeue mi timers
+	* src/modules/m2pa_sl.c: use mi_timer_requeue to requeue mi timers
+	* src/modules/m2ua_as.c: use mi_timer_requeue to requeue mi timers
+	* src/modules/m3ua_as.c: use mi_timer_requeue to requeue mi timers
+
 2007-05-07  Brian Bidulock  <bidulock@openss7.org>
 
 	* tests/kernel.at: correction to module test for new distros
